Format java
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>